--- a/html/gallery.html
+++ b/html/gallery.html
@@ -7,6 +7,8 @@
     <link rel="icon" type="image/png" href="../logo/logo1.png" />
     <link rel="stylesheet" href="../css/gallery.css">
     <link rel="stylesheet" href="../css/navbar&footer.css">
+    <!-- Font Awesome for social media icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script src="../js/gallery.js" defer></script>
     <script src="../js/navbar&footer.js" defer></script>
 </head>
@@ -121,10 +123,18 @@
                     <p class="footer-tagline">Crafting excellence in timber since 1963</p>
                 </div>
                 <div class="social-links">
-                    <a href="#" class="social-link" title="Facebook">📘</a>
-                    <a href="#" class="social-link" title="Instagram">📷</a>
-                    <a href="#" class="social-link" title="LinkedIn">💼</a>
-                    <a href="#" class="social-link" title="YouTube">📺</a>
+                    <a href="https://facebook.com/yourpage" class="social-link facebook" title="Facebook" target="_blank">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a href="https://wa.me/94770113070" class="social-link whatsapp" title="WhatsApp" target="_blank">
+                        <i class="fab fa-whatsapp"></i>
+                    </a>
+                    <a href="https://linkedin.com/company/yourcompany" class="social-link linkedin" title="LinkedIn" target="_blank">
+                        <i class="fab fa-linkedin-in"></i>
+                    </a>
+                    <a href="https://youtube.com/yourchannel" class="social-link youtube" title="YouTube" target="_blank">
+                        <i class="fab fa-youtube"></i>
+                    </a>
                 </div>
             </div>
             <div class="footer-section">
