button adding and edited

--- a/html/price&services.html
+++ b/html/price&services.html
@@ -956,11 +956,11 @@
                 <div class="footer-bottom-left">
                     <p>&copy; 2025 Sudharma Timber Store. All rights reserved.</p>
                     <div class="footer-bottom-links">
-                        <a href="#">Privacy Policy</a>
+                        <a href="../html/privacypolicy.html">Privacy Policy</a>
                         <span>•</span>
-                        <a href="#">Terms of Service</a>
+                        <a href="../html/termsofservices.html">Terms of Service</a>
                         <span>•</span>
-                        <a href="#">Sustainability</a>
+                        <a href="../html/sustainability.html">Sustainability</a>
                     </div>
                 </div>
                 <div class="footer-bottom-right">
@@ -969,6 +969,11 @@
             </div>
         </div>
     </footer>
+
+    <!-- Scroll Navigation Button -->
+    <button id="scrollBtn" class="scroll-btn" onclick="handleScroll()" title="Go to Bottom">
+        <span id="scrollIcon">⬇️</span>
+    </button>
 
 </body>
 </html>
