update with google

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="F-g92e6II7m0HwKNyKJrz4CckfbxtTsCRxzbpG3nPz8" />
     <title>Sudharma Premium Timber Products</title>
+    <meta name="description" content="Sudharma Timber Store in Sri Lanka offers premium wood products including Ginisapu, Grandis, and Mahogany. Trusted since 1963 for sustainable and high-quality timber solutions.">
     <link rel="icon" type="image/png" href="./logo/logo1.png" />
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/navbar&footer.css">
@@ -13,6 +14,17 @@
     <script src="./js/index.js" defer></script>
     <script src="./js/navbar&footer.js" defer></script>
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EP6LPX052J"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-EP6LPX052J');
+</script>
+
 <body>
 
     <!-- Navigation Bar -->
