--- a/html/quote.html
+++ b/html/quote.html
@@ -13,6 +13,17 @@
     <script src="../js/navbar&footer.js" defer></script>
 
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EP6LPX052J"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-EP6LPX052J');
+</script>
+
 <body>
 
     <!-- Navigation Bar -->
