--- a/html/sustainability.html
+++ b/html/sustainability.html
@@ -294,6 +294,17 @@
         }
     </style>
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EP6LPX052J"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-EP6LPX052J');
+</script>
+
 <body>
     <!-- Navigation Bar -->
     <nav class="navbar" id="navbar">
