--- a/html/quote.html
+++ b/html/quote.html
@@ -36,10 +36,15 @@
             <li><a href="../html/price&services.html">Price Range</a></li>
             <li><a href="../html/contactus.html">Contact Us</a></li>
         </ul>
-        <div class="hamburger" onclick="toggleMenu()">
-            <span></span>
-            <span></span>
-            <span></span>
+        <div class="nav-actions">
+            <button class="theme-toggle" onclick="toggleTheme()" id="themeToggle">
+                <i class="fas fa-moon" id="themeIcon"></i>
+            </button>
+            <div class="hamburger" onclick="toggleMenu()">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </div>
     </nav>
 
@@ -227,7 +232,7 @@
         <div class="footer-content">
             <div class="footer-section">
                 <div class="footer-logo">
-                    <div class="logo"><img src="../logo/logo2.png" alt="Sudharma Timber Logo"></div>
+                    <div class="logo"><img src="./logo/logo2.png" alt="Sudharma Timber Logo"></div>
                     <p class="footer-tagline">Crafting excellence in timber since 1963</p>
                 </div>
                 <div class="social-links">
@@ -298,21 +303,10 @@
         </div>
         <div class="footer-bottom">
             <div class="footer-bottom-content">
-                <div class="footer-bottom-left">
-                    <p>&copy; 2025 Sudharma Timber Store. All rights reserved.</p>
-                    <div class="footer-bottom-links">
-                        <a href="#">Privacy Policy</a>
-                        <span>•</span>
-                        <a href="#">Terms of Service</a>
-                        <span>•</span>
-                        <a href="#">Sustainability</a>
-                    </div>
-                </div>
-                <div class="footer-bottom-right">
-                    <p>🌱 Sustainably sourced • FSC Certified</p>
-                </div>
+                <p>&copy; 2026 Sudharma Timber Store. All rights reserved.</p>
             </div>
         </div>
     </footer>
+
 </body>
 </html>
